Updates for Java9+