@@ -429,7 +429,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
                     try
                     {
                         Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), mmd.getOrderMetaData() != null);
-                        coll = (Collection<Object>) instanceType.newInstance();
+                        coll = (Collection<Object>) instanceType.getDeclaredConstructor().newInstance();
                     }
                     catch (Exception e)
                     {
@@ -497,7 +497,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
                     try
                     {
                         Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), false);
-                        map = (Map) instanceType.newInstance();
+                        map = (Map) instanceType.getDeclaredConstructor().newInstance();
                     }
                     catch (Exception e)
                     {
